# elikos_decisionmaking

./: CMakeLists.txt
cfg/: decisionmaking2018.yaml  decisionmaking_params.yaml
launch/: decisionmaking.launch  decisionmaking2018.launch
src/ai/: CMakeLists.txt  MessageHandler.cpp  MessageHandler.h
src/ai/command/: FollowCommand.cpp  FrontInteractionCommand.cpp  MovementCommand.cpp  ObservationCommand.cpp  TakeOffCommand.cpp  TopInteractionCommand.cpp
src/decisionmaking/: CMakeLists.txt  DecisionMaking.cpp  DmMessageHandler.cpp  DmMessageHandler.h  Doxyfile  InformationManager.cpp  InformationManager.h  Quad.cpp  Quad.h  README.md  TargetRobot.cpp  TargetRobot.h
src/decisionmaking/behaviour/: Behaviour.cpp  Behaviour.h
src/decisionmaking/command/: Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  StandbyCommand.cpp  StandbyCommand.h
src/decisionmaking/info/: Quad.cpp  Quad.h  TargetRobot.cpp  TargetRobot.h
src/decisionmaking/strategy/: Strategy.cpp  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  TestFollowRobotStrategy.h  TestShapeStrategy.h
